CloudFormation_Templates/nw-workshop-vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "This template deploys a VPC, with a public subnet. It deploys an Internet Gateway, with a default route on the public subnet. It deploys an EC2 instance in the public subnet to serve as a bastion host"
Parameters:
  ChildVPCCIDR:
    Description: VPC_CIDR
    Type: String
  CloudFormationS3Bucket :
    Type: String
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref ChildVPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    DependsOn: VPC
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  InstanceSecurityGroup:
    DependsOn: VPC
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and ICMP access
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: icmp
        FromPort: 8
        ToPort: -1
        CidrIp: 0.0.0.0/0
  Subnet0:
    Type: AWS::CloudFormation::Stack
    DependsOn: InternetGatewayAttachment
    Properties:
      TemplateURL:
        !Join
        - ''
        - - 'https://'
          - !Ref CloudFormationS3Bucket
          - '.s3.us-east-2.amazonaws.com/nw-workshop-public-subnet.yml'
      Parameters:
        ChildSubnetCIDR: !Select [ 0, !Cidr [ !Ref  ChildVPCCIDR, 4, 8 ]]
        VPC: !Ref VPC
        InternetGateway: !Ref InternetGateway
        InstanceSecurityGroup: !Ref InstanceSecurityGroup
        CloudFormationS3Bucket: !Ref CloudFormationS3Bucket
  Subnet1:
    Type: AWS::CloudFormation::Stack
    DependsOn: InternetGatewayAttachment
    Properties:
      TemplateURL:
        !Join
        - ''
        - - 'https://'
          - !Ref CloudFormationS3Bucket
          - '.s3.us-east-1.amazonaws.com/nw-workshop-private-subnet.yml'
      Parameters:
        ChildSubnetCIDR: !Select [ 1, !Cidr [ !Ref  ChildVPCCIDR, 4, 8 ]]
        VPC: !Ref VPC
        InstanceSecurityGroup: !Ref InstanceSecurityGroup
        CloudFormationS3Bucket: !Ref CloudFormationS3Bucket
  Subnet2:
    Type: AWS::CloudFormation::Stack
    DependsOn: InternetGatewayAttachment
    Properties:
      TemplateURL:
        !Join
        - ''
        - - 'https://'
          - !Ref CloudFormationS3Bucket
          - '.s3.us-east-1.amazonaws.com/nw-workshop-private-subnet.yml'
      Parameters:
        ChildSubnetCIDR: !Select [ 2, !Cidr [ !Ref  ChildVPCCIDR, 4, 8 ]]
        VPC: !Ref VPC
        InstanceSecurityGroup: !Ref InstanceSecurityGroup
        CloudFormationS3Bucket: !Ref CloudFormationS3Bucket
Outputs:
  ChildVPCCIDR:
    Value: !Ref ChildVPCCIDR
  InternetGatewayId:
    Value: !Ref InternetGateway
  VPCID:
    Value: !Ref VPC
